add controllers, fix model and service

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DimaYurashevich/PSKP#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.2"
