--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/DimaYurashevich/PSKP#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.3.0",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.2"
   }
