--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.1",
     "jsonwebtoken": "^7.3.0",
     "mysql": "^2.13.0",
-    "sequelize": "^3.30.2"
+    "sequelize": "^3.30.2",
+    "siege": "^0.2.0"
   }
 }
